Resolved h1 issues, made button more visible

--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -15,6 +15,16 @@ Text Domain:  accelerate-theme-child
 
 .button {
     background: none repeat scroll 0 0 #28625A;
+	outline: auto;
+	transition-duration: 0.4s;
+}
+
+.button:hover {
+	background-color: white;
+}
+
+a.button:hover {
+	color: #28625A;
 }
 
 #primary {
@@ -31,8 +41,16 @@ img {
 	text-align: center;
 }
 
-h1.hidden {
-	display: none;
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border: 0;
 }
 
 /*--- Footer ---*/
@@ -238,6 +256,14 @@ ul.homepage-featured-work {
 
 /* Blog */
 
+h1.page-title {
+	margin: 1em 0 0 0;
+}
+
+.main-content {
+	padding: 1em 0 0 0;
+}
+
 .entry-header h1 {
 	margin-top: 0;
 	margin-bottom: 1em;
@@ -292,13 +318,6 @@ ul.homepage-featured-work {
 	color: #595959;
 }
 
-#sidebar h1 {
-	font: 700 .875em/1.75 'Open Sans', Arial, sans-serif;
-	color: #28625A;
-	margin: 0 auto 1.25em;
-	text-transform: uppercase;
-}
-
 .primary-sidebar ul {
 	list-style-type: disc;
 }
@@ -338,6 +357,28 @@ aside.case-study-sidebar h4 {
 	font: 100 .85em 'Montserrat', 'Open Sans', Arial, sans-serif;
     color: #595959;
     margin: 0 0 2em 0;
+}
+
+aside.single-case-study h1 {
+	font: 500 1.4em 'Montserrat', 'Open Sans', Arial, sans-serif;
+    color: #595959;
+    margin: 3em 0 .5em 0;
+	text-align: left;
+	text-transform: none;
+}
+
+aside.single-case-study h2 {
+	font: 300 .75em 'Montserrat', 'Open Sans', Arial, sans-serif;
+    color: #595959;
+    margin: 0 0 1em 0;
+	text-align: left;
+}
+
+aside.single-case-study h3{
+	font: 100 .85em 'Montserrat', 'Open Sans', Arial, sans-serif;
+    color: #595959;
+    margin: 0 0 2em 0;
+	text-align: left;
 }
 
 aside.case-study-sidebar p {
